--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+  <title>Polly</title>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-    <img src="src/img/Polly 001.jpg" />
-  </main>
+  <section class="section">
+    <div class="container">
+      <h1 class="title is-3">Polly</h1>
+      <figure class="image is-9by16">
+        <img src="/img/Polly 001.jpg" />
+      </figure>
+    </div>
+  </section>
 </body>
-
 </html>
