--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,34 @@
   <title>Polly</title>
 </head>
 <body>
+  <section class="hero is-primary">
+    <div class="container has-text-centered">
+      <div class="hero-body">
+        <p class="title">
+          For Polly
+        </p>
+      </div>
+    </div>
+  </section>
   <section class="section">
     <div class="container">
-      <h1 class="title is-3">Polly</h1>
-      <figure class="image is-9by16">
-        <img src="/img/Polly 001.jpg" />
-      </figure>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 001.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 002.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 003.jpg" />
+          </figure>
+        </div>
+      </div>
     </div>
   </section>
 </body>
