--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,21 @@
         <p class="title">
           For Polly
         </p>
+        <p class="subtitle">
+          Feb. 12, 2024
+        </p>
       </div>
     </div>
   </section>
   <section class="section">
     <div class="container">
+      <div class="columns">
+        <div class="column">
+          <div class="content">
+            <p>Dogs are the weirdest creatures. Of all the heartbreaks I’ve encountered in my life, this one was the most painful, and yet this is the only one where I deliberately dove in. Despite knowing it will end in heartbreak, in anguish, I consciously chose this life with her. And I never ever regretted it. It was amazing.</p>
+          </div>
+        </div>
+      </div>
       <div class="columns">
         <div class="column">
           <figure class="image is-9by16">
