add more text and pictures

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           For Polly
         </p>
         <p class="subtitle">
-          Feb. 12, 2024
+          Feb. 10, 2024
         </p>
       </div>
     </div>
@@ -24,8 +24,32 @@
     <div class="container">
       <div class="columns">
         <div class="column">
-          <div class="content">
+          <div class="content is-large">
             <p>Dogs are the weirdest creatures. Of all the heartbreaks I’ve encountered in my life, this one was the most painful, and yet this is the only one where I deliberately dove in. Despite knowing it will end in heartbreak, in anguish, I consciously chose this life with her. And I never ever regretted it. It was amazing.</p>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly Main 01.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly Main 02.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly Main 03.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="content is-large">
+            <p>Polly was an amazing dog. Despite contracting Erlichia at age 2, she constantly fought it. She was even diagnosed to last no more than a few months in 2019 and yet she lived another 4 years. And in those 10 short years with her, I learned to constantly fully live in the moment with her, never failing to share her joy, delighting in her innocence in the littlemost things. She taught me lessons about forgiving fully and loving without limits. In those remaining years, I learned to prepare myself for the inevitable but then again, here I am now. I thought I was prepared, but you’ll never be. In spite of everything I did, I can never support the illusion that she would always be here for me in this lifetime, even whispering a silent prayer at night asking to give me more time with her, whatever it takes, I’ll do it.</p>
           </div>
         </div>
       </div>
@@ -43,6 +67,71 @@
         <div class="column">
           <figure class="image is-9by16">
             <img src="/img/Polly 003.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="content is-large">
+            <p>But I think it’s warm and sad and wonderful and painful and beautiful at the same time. There’s such beauty in that hard honesty that dogs’ lives are so short… in accepting and giving love while always aware that it comes with an unbearable price.</p>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 004.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 005.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 006.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="content is-large">
+            <p>My heart dog. My sunshine. My bestfriend. The love of my life. I love you forever. I've read somewhere that dogs go when they've taught us the lessons we need to learn and when they're fully ready to become human. In that case, come back to me in any form or way. I don’t think I’ll ever be okay because I’ll miss you everyday. You waking me up in the morning, the constant papansin whenever I’m working, your brattiness and your charm. Your presence is all over my room and in this household and I don’t think I’ll be okay any time soon. But even in the end you were the goodest girl. Everything happened so quick, you never gave me time to react and be stressed out. You just decided it was time to go so as to spare me from all the bother. Thank you still. I love you very much. I bet there are plenty of balls out there to catch and coconuts to eat. I love you forever.</p>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 007.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 008.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 009.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 010.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 011.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 012.jpg" />
           </figure>
         </div>
       </div>
