show more images

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,244 @@
           </figure>
         </div>
       </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 013.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 014.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 015.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 016.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 017.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 018.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 019.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 020.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 021.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 022.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 023.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 024.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 025.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 026.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 027.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 028.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 029.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 030.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 031.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 032.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 033.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 034.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 035.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 036.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 037.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 038.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 039.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 040.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 041.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 042.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 043.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 044.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 045.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 046.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 047.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 048.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 049.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 050.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 051.jpg" />
+          </figure>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 052.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 053.jpg" />
+          </figure>
+        </div>
+        <div class="column">
+          <figure class="image is-9by16">
+            <img src="/img/Polly 054.jpg" />
+          </figure>
+        </div>
+      </div>
     </div>
   </section>
 </body>
